Change external command execution way.